force-app/main/default/objects/Team_Rate_Plans__c/Team_Rate_Plans__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is used to configure the Zuora Team Products</description>
    <label>Team Rate Plans</label>
</CustomObject>