force-app/main/default/objects/Team_Rate_Plans__c/fields/Zuora_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Product_Id__c</fullName>
    <description>Product Id in Zuora</description>
    <label>Zuora Product Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>