force-app/main/default/objects/Team_Rate_Plans__c/fields/Zuora_Product_Rate_Plan_Charge_Id__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Product_Rate_Plan_Charge_Id__c</fullName>
    <label>Zuora Product Rate Plan Charge Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>